objects/Documentation__c.object
<CustomObject>
    <description>Object to provide documentation for the user story</description>
    <fields>
        <fullName>Documentation_details__c</fullName>
        <label>Documentation</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Published</fullName>
                </value>
                <value>
                    <fullName>Not required</fullName>
                </value>
                <value>
                    <fullName>Required</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Release Notes</fullName>
                </value>
                <value>
                    <fullName>Functional Documentation</fullName>
                </value>
                <value>
                    <fullName>Upgrade Instructions</fullName>
                </value>
                <value>
                    <fullName>PoC</fullName>
                </value>
                <value>
                    <fullName>Academy</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>User_Story__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User Story</label>
        <referenceTo>copado__User_Story__c</referenceTo>
        <relationshipLabel>Documentation</relationshipLabel>
        <relationshipName>Documentation_del</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Documentation</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Documentation Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Documentation</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>